# CeBu-CDP-pyspark-main

./: .gitignore  .gitpod.yml  big_cluster.csv  dedup.ipynb  dedupe_validation_app.py  dev-qa.txt  glue_job.py  glue_python_additional_modules  init.ipynb  one_cluster.csv  person.d20220802.t051018.r1752..avro  profile_config_cebu_v1.json  profile_config_helper.ipynb  requirements.txt  ui_calc.ipynb
ccai/: README.md  og.py  pyproject.toml
ccai/ccai/: __init__.py
ccai/ccai/dedupe/: main.py
ccai/ccai/license/: license_check.py
ccai/ccai/profiles/: main.py
ccai/ccai/ucp/: main.py  main_incremental.py
ccai/ccai/ui_compute/: main.py
ccai/clean_code/: main.py  profile_config_cebu_v1.json
ccai/qa/: profile_config_cebu_v1.json
dedup_debug/: dob_list.csv
