[tool.poetry]
name = "ccai"
version = "0.1.0"
description = ""
authors = ["AnilTuraga <anil.turaga@mind-graph.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.3.1"
pandas = "^1.5.2"
boto3 = "^1.26.41"
pyarrow = "^10.0.1"
abydos = "^0.5.0"
unidecode = "^1.3.6"
networkx = "^3.0"
ceja = "^0.4.0"
psycopg2-binary = "^2.9.1"
pg8000 = "^1.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
